Ajout de l historique des credits
